# ER-Character-Importer

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: app.rs
src-models/: cargo.toml
src-models/src/: character_summary.rs  error.rs  lib.rs  result.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  saves.rs
src/components/: card.rs  list.rs  mod.rs  toolbar.rs
