[package]
name = "er-character-importer-ui"
version = "0.1.0"
edition = "2021"

[profile.dev]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
yew-autoprops = "0.4.1"
er-save-models = { path = "src-models" }
serde_json = "1"
strsim = "0.11.1"

[workspace.dependencies]
er-save-lib = { git = "https://github.com/ClayAmore/ER-Save-Lib" }

[workspace]
members = ["src-tauri", "src-models"]
